DevOCL/src/objects/CLQ_Staff_Training__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_CA__c</fullName>
        <label>CA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_CPR__c</fullName>
        <label>CPR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Course_Name__c</fullName>
        <label>Course Name</label>
        <picklist>
            <picklistValues>
                <fullName>First Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conscious Discipline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How to increase the</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management of Communicable Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Abuse Recognition and Prevention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Credits__c</fullName>
        <label>Credits</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Current_Period_End__c</fullName>
        <label>Current Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Current_Period_Start__c</fullName>
        <label>Current Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Staff Training object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_FA__c</fullName>
        <label>FA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Full_Course_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Course Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Highest_Verified_Education__c</fullName>
        <formula>TEXT( CLQ_Staff_Record__r.CLQ_Highest_Verified_Education_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Verified Education</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Hire_Date_From__c</fullName>
        <label>Hire Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Hire_Date_To__c</fullName>
        <label>Hire Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Staff Training</relationshipLabel>
        <relationshipName>Staff_Training</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_MCD__c</fullName>
        <label>MCD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_OPR_Hours__c</fullName>
        <label>OPR Hours</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_On_Site_Hours__c</fullName>
        <label>On Site Hours</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Staff_Position__c</fullName>
        <formula>TEXT( CLQ_Staff_Record__r.CLQ_Position__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Staff_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Name</label>
        <referenceTo>CLQ_Staff_Record__c</referenceTo>
        <relationshipLabel>Staff Training</relationshipLabel>
        <relationshipName>Staff_Training</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Training_Met__c</fullName>
        <label>Training Met</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Training_Type__c</fullName>
        <label>Training Type</label>
        <picklist>
            <picklistValues>
                <fullName>Professional Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Units__c</fullName>
        <label>Units</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Staff Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Staff Training No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Training</pluralLabel>
    <recordTypes>
        <fullName>CLQ_Health_Safety_Training</fullName>
        <active>true</active>
        <description>Courses related to Health &amp; Safety</description>
        <label>Health &amp; Safety Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLQ_Professional_Development_Training</fullName>
        <active>true</active>
        <description>Courses related to Professional Development</description>
        <label>Professional Development Training</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>